basic HTML template and CBUS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
+<!DOCTYPE html>
 <html>
+	<head>
+        <meta charset="UTF-8">
+        <title>PiRail</title>
+        <link rel="stylesheet" type="text/css" href="PiRailStyle.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    </head>
 
+<body>
+	
+	<ul class="tab-links">
+		<li class="active"><a href="#cab">Cab</a></li>
+		<li><a href="#panel">Panel</a></li>
+	</ul>
 
+	<div class="tab-content">
+		<div id="cab" class="tab active">
+			<p>Train Control goes here</p>
+		</div>
+		
+		<div id="panel" class="tab">
+			<p>Layout Control goes here</p>
+		</div>
+	</div>
+	
+	<div class="CBUS feed">
+		<p>CBUS events feed</p>
+	</div>
+
+</body>
 
 </html>
