accessory saving and loading

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 		<div id="cab" class="tab active">
 			<p>Train Control goes here</p>
 			
+			<input type="range"  min="0" max="128"/>
 			
+			<button type="button">STOP</button>
 			
 		</div>
 		
 		<div id="panel" class="tab">
 			<p>Layout Control goes here</p>
+			
 		</div>
 	</div>
 	
