partial front-end a logic improvements
The main web page and javascript have been expanded, with some very
basic functionality.

--- a/index.html
+++ b/index.html
@@ -21,39 +21,41 @@
 			
 			<div id="display">
                 <input type="text" id="val" readonly>
+				<button type="button" id="clear">clear</button>
+				<button type="button" id="enter">enter</button>
             </div>
 			
 			<p>
-				<button type="button"><</button>
-				<button type="button" class="direction active">></button>
-			</p>
-				
-			<p>
-				<button type="button">address</button>
-				<button type="button">acceleration</button>
-				<button type="button">deceleration</button>
-				<button type="button">function</button>
+				<button type="button" id="backwards"><</button>
+				<button type="button" id="forwards" class="direction active">></button>
 			</p>
 			
 			<br>
+				<input type="button" id="address">address</button>
                 <input type="button" id="seven" value="7">
                 <input type="button" id="eight" value="8">
                 <input type="button" id="nine" value="9">
-                </br>
-                <br>
+            </br>
+            <br>
+				<input type="button" id="acceleration">acceleration</button>
                 <input type="button" id="four" value="4">
                 <input type="button" id="five" value="5">
                 <input type="button" id="six" value="6">
-                </br>
-                <br>
+            </br>
+            <br>
+				<input type="button" id="deceleration">deceleration</button>
                 <input type="button" id="one" value="1">
                 <input type="button" id="two" value="2">
                 <input type="button" id="three" value="3">
-                </br>
+            </br>
+			<br>
+				<input type="button" id="function">function</button>
+				<input type="button" id="backwards"><</button>
+				<input type="button" id="zero" value="0">
+				<button type="button" id="forwards" class="direction active">></button>
+			</br>
 			
-			<p>
-			
-			<input type="range"  min="0" max="128" value="0"/>
+			<input type="range"  min="0" max="128" value="0" />
 			
 			<button type="button">STOP</button>
 			
@@ -70,5 +72,9 @@
 	</div>
 
 </body>
+
+<script src="Model.js"></script>
+<script src="PiRailView.js"></script>
+<script src="controller.js"></script>
 
 </html>
