--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 			</br>
 			</div>
 			
+			<div class="picture">
+				<img src="placeholder.png" id="vehicle">
+			</div>
+			
 			<div class="info">
 				<div class="col1">
 				<p class="speedlabel">Speed: </p>
@@ -79,10 +83,10 @@
 		    </div>
 			
 			<div class="submenu">
-				<input type="button" class="button stop" value="STOP"></input>
-				<input type="button" class="button submenubutton save" value="save"></input>
-				<input type="button" class="button submenubutton add" value="+"></input>
-				<input type="button" class="button submenubutton remove" value="-"></input>
+				<input type="button" id="stop" class="button stop" value="STOP"></input>
+				<input type="button" id="savelocos" class="button submenubutton save" value="save"></input>
+				<input type="button" id="addlocos" class="button submenubutton add" value="+"></input>
+				<input type="button" id="removelocos" class="button submenubutton remove" value="-"></input>
 			</div>
 			
             </div>
@@ -100,10 +104,10 @@
 				</div>
 				
 				<div class="submenu">
-					<input type="button" class="button stop" value="STOP"></input>
-					<input type="button" class="button submenubutton save" value="save"></input>
-					<input type="button" class="button submenubutton add" value="+"></input>
-					<input type="button" class="button submenubutton remove" value="-"></input>
+					<input type="button" id="stop" class="button stop" value="STOP"></input>
+					<input type="button" id="saveaccessories" class="button submenubutton save" value="save"></input>
+					<input type="button" id="addaccessory" class="button submenubutton add" value="+"></input>
+					<input type="button" id="removeaccessory" class="button submenubutton remove" value="-"></input>
 				</div>
 				
            </div> 
